err/vecnet.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vecnet'...
Listing './lib/python3.5/site-packages/vecnet/emod'...
Listing './lib/python3.5/site-packages/vecnet/emod/bin'...
Compiling './lib/python3.5/site-packages/vecnet/emod/bin/buildCsvFile.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/bin/buildCsvFile.py", line 22
    print "Please provide a json file, a bin file, and desired csv file name."
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/bin/buildEmodFiles.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/bin/buildEmodFiles.py", line 22
    print "Please provide a csv file, desired json file name, and desired bin file name."
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/bin/plot_weather_from_output.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/bin/plot_weather_from_output.py", line 17
    print koppen_zone, filename
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/climate.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/climate.py", line 602
    print "Node ID: " + self.nodeIDs[node]
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/demographics.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/demographics.py", line 175
    print decompile_demographics(os.path.join("tests",
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vecnet/emod/experiment.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/experiment.py", line 22
    print "Usage: generate_sweeps <ExperimentSpecification.json>"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/koppen.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/koppen.py", line 89
    print "Usage: python -m vecnet.emod.koppen koppen.dat Aw [1,2,3,4]"
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vecnet/emod/migration.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/migration.py", line 69
    print struct.unpack("@dddddddd", migration_rates)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vecnet/emod/output'...
Compiling './lib/python3.5/site-packages/vecnet/emod/output/binnedreport.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/output/binnedreport.py", line 101
    print binned_report_obj._get_channel_number("New Diagnostic Prevalence")
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vecnet/emod/run.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/run.py", line 70
    print "retcode: %s" % run_emod(exe,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vecnet/emod/tests'...
Compiling './lib/python3.5/site-packages/vecnet/emod/tests/tests_climate.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/tests/tests_climate.py", line 252
    print "A new check needs to be placed here to check node offsets. (tests:testExpectedResults)"
                                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vecnet/emod/tests/tests_output.py'...
***   File "./lib/python3.5/site-packages/vecnet/emod/tests/tests_output.py", line 26
    print "Testing file: %s" % os.path.abspath(sys.modules[BinnedReport.__module__].__file__)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vecnet/openmalaria'...
Listing './lib/python3.5/site-packages/vecnet/openmalaria/bin'...
Compiling './lib/python3.5/site-packages/vecnet/openmalaria/bin/expand.py'...
***   File "./lib/python3.5/site-packages/vecnet/openmalaria/bin/expand.py", line 43
    print "%s scenarios generated" % (i-1)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vecnet/openmalaria/scenario'...
Listing './lib/python3.5/site-packages/vecnet/openmalaria/tests'...
Compiling './lib/python3.5/site-packages/vecnet/openmalaria/tests/test_scenario.py'...
***   File "./lib/python3.5/site-packages/vecnet/openmalaria/tests/test_scenario.py", line 163
    print vector
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vecnet-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/vecnet.emod-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/vecnet.openmalaria-0.9.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
